<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/my_setting_name"
            android:textColor="@color/home_text_black"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/iv_setting_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:src="@drawable/left_back"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e8e8e8"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:id="@+id/ll_change_my_account"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:weightSum="750">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:src="@drawable/setting_account"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="35"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="600"
            android:gravity="center_vertical"
            android:text="@string/change_setting_name"
            android:textColor="@color/home_text_black"
            android:textSize="12sp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="35"
            android:scaleType="fitStart"
            android:src="@drawable/home_youjiantou"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e8e8e8"/>

    <LinearLayout
        android:id="@+id/ll_patient_text"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:weightSum="750">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:src="@drawable/setting_help"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="35"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="600"
            android:gravity="center_vertical"
            android:text="@string/patient"
            android:textColor="@color/home_text_black"
            android:textSize="12sp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="35"
            android:scaleType="fitStart"
            android:src="@drawable/home_youjiantou"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e8e8e8"/>

    <LinearLayout
        android:id="@+id/ll_help"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:weightSum="750">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:src="@drawable/setting_help"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="35"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="600"
            android:gravity="center_vertical"
            android:text="@string/help"
            android:textColor="@color/home_text_black"
            android:textSize="12sp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="35"
            android:scaleType="fitStart"
            android:src="@drawable/home_youjiantou"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e8e8e8"/>

    <LinearLayout
        android:id="@+id/ll_feedback"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:weightSum="750">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:src="@drawable/seeting_feedback"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="35"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="600"
            android:gravity="center_vertical"
            android:text="@string/feedback"
            android:textColor="@color/home_text_black"
            android:textSize="12sp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="35"
            android:scaleType="fitStart"
            android:src="@drawable/home_youjiantou"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e8e8e8"/>

    <LinearLayout
        android:id="@+id/ll_declare"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:weightSum="750">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:src="@drawable/setting_declare"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="35"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="600"
            android:gravity="center_vertical"
            android:text="@string/declare"
            android:textColor="@color/home_text_black"
            android:textSize="12sp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="35"
            android:scaleType="fitStart"
            android:src="@drawable/home_youjiantou"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e8e8e8"/>

    <LinearLayout
        android:id="@+id/ll_about_us"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:weightSum="750">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:src="@drawable/setting_aboutus"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="35"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="600"
            android:gravity="center_vertical"
            android:text="@string/aboutus"
            android:textColor="@color/home_text_black"
            android:textSize="12sp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="35"
            android:scaleType="fitStart"
            android:src="@drawable/home_youjiantou"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e8e8e8"/>

    <TextView
        android:id="@+id/tvDes"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="#ffffff"
        android:gravity="center"
        android:text="我不知道显示什么"
        android:textColor="@color/home_text_black"
        android:textSize="14sp"
        />

</LinearLayout>