<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFAF0"
    tools:context=".MainActivity">

    <!--    <Button-->
    <!--        android:id="@+id/button5"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="@drawable/shape1"-->
    <!--        android:onClick="setAlarmOne"-->
    <!--        android:text="设置闹钟(一次)"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/button"-->
    <!--        tools:layout_editor_absoluteX="0dp" />-->

    <!--    <Button-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="@drawable/shape1"-->
    <!--        android:onClick="setAlarmCycle"-->
    <!--        android:text="设置闹钟(周期)"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/button5"-->
    <!--        tools:layout_editor_absoluteX="0dp" />-->

    <!--    <Button-->
    <!--        android:id="@+id/button"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="@drawable/shape1"-->
    <!--        android:onClick="cancelAlarmCycle"-->
    <!--        android:text="取消周期闹钟"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        tools:layout_editor_absoluteX="0dp" />-->

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/shape1"
        android:drawable="@drawable/music"
        android:text="@string/button1_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:background="@drawable/shape1"
        android:text="@string/button2_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/shape1"
        android:text="@string/button3_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:background="@drawable/shape1"
        android:text="@string/button4_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="99dp"
        android:layout_height="114dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="68dp"
        android:src="@drawable/calendarr"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="64dp"
        android:src="@drawable/musicc"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginBottom="68dp"
        android:src="@drawable/calendarrr"
        app:layout_constraintBottom_toBottomOf="@+id/button1"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    <ImageView-->
    <!--        android:layout_width="184dp"-->
    <!--        android:layout_height="116dp"-->
    <!--        android:layout_alignParentStart="true"-->
    <!--        android:layout_alignParentLeft="true"-->
    <!--        android:layout_alignParentTop="true"-->
    <!--        android:src="@drawable/xiaopengyou"-->
    <!--        tools:layout_editor_absoluteX="128dp"-->
    <!--        tools:layout_editor_absoluteY="616dp" />-->

    <!--    <ImageView-->
    <!--        android:layout_width="184dp"-->
    <!--        android:layout_height="116dp"-->
    <!--        android:layout_alignParentStart="true"-->
    <!--        android:layout_alignParentLeft="true"-->
    <!--        android:layout_alignParentTop="true"-->
    <!--        android:src="@drawable/shumu"-->
    <!--        tools:layout_editor_absoluteX="223dp"-->
    <!--        tools:layout_editor_absoluteY="616dp" />-->

    <!--    <ImageView-->
    <!--        android:layout_width="156dp"-->
    <!--        android:layout_height="98dp"-->
    <!--        android:layout_alignParentStart="true"-->
    <!--        android:layout_alignParentLeft="true"-->
    <!--        android:layout_alignParentTop="true"-->
    <!--        android:src="@drawable/xiaoniao"-->
    <!--        tools:layout_editor_absoluteX="1dp"-->
    <!--        tools:layout_editor_absoluteY="25dp" />-->

    <ImageView
        android:layout_width="73dp"
        android:layout_height="82dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="320dp"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/taiyang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="434dp"
        android:layout_height="198dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/xiaoqunniao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginBottom="68dp"
        android:src="@drawable/gamee"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>